fix(search-trend): fix the gap between posts

--- a/static/styles/searchtrend.css
+++ b/static/styles/searchtrend.css
@@ -1,3 +1,9 @@
 .searched-trend-container {
 	width: 50rem;
 }
+
+.searched-trend-feed {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
